--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -200,7 +200,7 @@
         <!--Authentication Dialog - Login to Zotero-->
         <scene sceneID="2b1-LZ-39S">
             <objects>
-                <viewController title="Login to Zotero" modalPresentationStyle="pageSheet" id="mdR-2R-M4d" customClass="ZPAuthenticationDialog" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AuthenticationDialog" title="Login to Zotero" modalPresentationStyle="pageSheet" id="mdR-2R-M4d" customClass="ZPAuthenticationDialog" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5oC-c4-SAg">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -509,7 +509,7 @@
         <!--Upload Version Conflict View Controller - Version conflict-->
         <scene sceneID="raI-k1-hcJ">
             <objects>
-                <viewController storyboardIdentifier="" title="Version conflict" modalPresentationStyle="pageSheet" id="RIY-yW-qZT" customClass="ZPUploadVersionConflictViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UploadVersionConflictViewController" title="Version conflict" modalPresentationStyle="pageSheet" id="RIY-yW-qZT" customClass="ZPUploadVersionConflictViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lVP-cF-OyN">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1042,7 +1042,7 @@
         <!--WebDAV Authentication View Controller - WebDAV redirect-->
         <scene sceneID="QQX-Jb-Hba">
             <objects>
-                <viewController storyboardIdentifier="WebDAVRedirectDialog" title="WebDAV redirect" modalPresentationStyle="pageSheet" id="Oh6-cP-hpL" customClass="ZPWebDAVAuthenticationViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebDAVAuthenticationViewController" title="WebDAV redirect" modalPresentationStyle="pageSheet" id="Oh6-cP-hpL" customClass="ZPWebDAVAuthenticationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PBa-3e-KmB">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1091,6 +1091,160 @@
         <image name="icon-up-black.png" width="23" height="20"/>
         <image name="verticalLines.png" width="6" height="1"/>
     </resources>
+    <classes>
+        <class className="HLSPlaceholderViewController" superclassName="HLSViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HLSPlaceholderViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="delegate"/>
+                <relationship kind="outlet" name="placeholderView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="HLSViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HLSViewController.h"/>
+        </class>
+        <class className="OHAttributedLabel" superclassName="UILabel">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OHAttributedLabel.h"/>
+            <relationships>
+                <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+        <class className="ZPAuthenticationDialog" superclassName="ZPModalViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAuthenticationDialog.h"/>
+            <relationships>
+                <relationship kind="action" name="loadFirstPage:"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="ZPBarBackgroundGradientView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPBarBackgroundGradientView.h"/>
+        </class>
+        <class className="ZPCollectionsAndTagsViewController" superclassName="HLSPlaceholderViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPCollectionsAndTagsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="handlePanGesture:" candidateClass="UIPanGestureRecognizer"/>
+                <relationship kind="action" name="toggleTagSelector:"/>
+                <relationship kind="outlet" name="cacheControllerPlaceHolder" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="collectionsView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="gearButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="headerArrowLeft" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="headerArrowRight" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="tagsHeader" candidateClass="ZPBarBackgroundGradientView"/>
+                <relationship kind="outlet" name="tagsView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="toolBar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="ZPFileImportViewController" superclassName="ZPModalViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPFileImportViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="carousel" candidateClass="iCarousel"/>
+            </relationships>
+        </class>
+        <class className="ZPFileViewerViewController" superclassName="HLSPlaceholderViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPFileViewerViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="actionButtonPressed:"/>
+                <relationship kind="action" name="dismiss:"/>
+                <relationship kind="action" name="handlePanGestureOnPullPane:" candidateClass="UIPanGestureRecognizer"/>
+                <relationship kind="action" name="next:"/>
+                <relationship kind="action" name="presentAllFiles:"/>
+                <relationship kind="action" name="previous:"/>
+                <relationship kind="action" name="toggleNavigationBar:"/>
+                <relationship kind="action" name="togglePullPane:"/>
+                <relationship kind="outlet" name="leftPullPane" candidateClass="UIView"/>
+                <relationship kind="outlet" name="leftPullTab" candidateClass="UIView"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="notesAndTagsTable" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="rightPullPane" candidateClass="UIView"/>
+                <relationship kind="outlet" name="rightPullTab" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="ZPItemDetailViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="actionButtonPressed:"/>
+                <relationship kind="outlet" name="actionButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="starButton" candidateClass="ZPStarBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="ZPItemListViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="sortButtonPressed:"/>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="toolBar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="ZPLibraryAndCollectionListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLibraryAndCollectionListViewController.h"/>
+        </class>
+        <class className="ZPLogViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLogViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="contactSupport:"/>
+                <relationship kind="action" name="dismiss:"/>
+                <relationship kind="action" name="manageKey:"/>
+                <relationship kind="action" name="showManual:"/>
+                <relationship kind="outlet" name="logView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="manualButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="ZPModalViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPModalViewController.h"/>
+        </class>
+        <class className="ZPNavigationController" superclassName="UINavigationController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPNavigationController.h"/>
+            <relationships>
+                <relationship kind="action" name="showLogView:"/>
+            </relationships>
+        </class>
+        <class className="ZPNoteEditingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPNoteEditingViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="deleteNote:"/>
+                <relationship kind="action" name="save:"/>
+                <relationship kind="outlet" name="navigationItem" candidateClass="UINavigationItem"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="ZPStarBarButtonItem" superclassName="UIBarButtonItem">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPStarBarButtonItem.h"/>
+        </class>
+        <class className="ZPTagEditingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPTagEditingViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="dismiss:"/>
+                <relationship kind="action" name="showPopover:"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="ZPUploadVersionConflictViewController" superclassName="ZPModalViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPUploadVersionConflictViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="useMyVersion:"/>
+                <relationship kind="action" name="useRemoteVersion:"/>
+                <relationship kind="outlet" name="carousel" candidateClass="iCarousel"/>
+                <relationship kind="outlet" name="label" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="secondaryCarousel" candidateClass="iCarousel"/>
+            </relationships>
+        </class>
+        <class className="ZPWebDAVAuthenticationViewController" superclassName="ZPModalViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPWebDAVAuthenticationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="iCarousel" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/iCarousel.h"/>
+            <relationships>
+                <relationship kind="outlet" name="dataSource"/>
+                <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
