--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -210,9 +210,9 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Log in to Zotero" id="ptL-59-1VP">
-                                        <barButtonItem key="rightBarButtonItem" title="Back to start" id="Qx1-LJ-U0z">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="Qx1-LJ-U0z">
                                             <connections>
-                                                <action selector="loadFirstPage:" destination="mdR-2R-M4d" id="thO-Cp-GqI"/>
+                                                <action selector="openActionSheet:" destination="mdR-2R-M4d" id="3kx-wk-8Jw"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -1111,7 +1111,7 @@
         <class className="ZPAuthenticationDialog" superclassName="ZPModalViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAuthenticationDialog.h"/>
             <relationships>
-                <relationship kind="action" name="loadFirstPage:"/>
+                <relationship kind="action" name="openActionSheet:"/>
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
